[project]
name = "melodine"
version = "0.2.8"
authors = [
  { name="Aditya Gaikwad", email="g.aditya2048@gmail.com" },
]
description = "cohesive models for seamlessly interacting with the Spotify and YouTube Music APIs "
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/addyett/melo"
"Bug Tracker" = "https://github.com/addyett/melo/issues"

[tool.poetry]
name = "melodine"
version = "0.2.8"
description = "cohesive models for seamlessly interacting with the Spotify and YouTube Music APIs"
authors = ["addyett <g.aditya2048@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ytmusicapi = "^0.24.0"  
requests = "^2.28.1"
spotipy = "^2.21.0"
youtube_dl = "^2021.12.17"
python-youtube = "^0.8.3"
appdirs = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
